# OpenGL_cmake

./: .gitignore  CMakeLists.txt
res/shaders/: basic.shader  basic_cube.shader  cube_fragment.glsl  cube_vertex.glsl  textured_cube_fragment.glsl  textured_cube_vertex.glsl  triangle.shader
src/: gl_util.cpp  index_buffer.cpp  index_buffer.h  main.cpp  renderer.cpp  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
src/renderer/: gl_util.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp  vertex_buffer_layout.h
src/scene/: cube_scene.cpp  cube_scene.h  dynamic_buffer_scene.cpp  dynamic_buffer_scene.h  scene.h  scene_menu.cpp  scene_menu.h  textured_cube_scene.cpp  textured_cube_scene.h  textured_logos_scene.cpp  textured_logos_scene.h  triangle_scene.cpp  triangle_scene.h
